--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -5,13 +5,14 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{662FEBCB-B68D-46A8-A4B8-C67F4C0FCC10}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MVC</RootNamespace>
     <AssemblyName>MVC</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -47,30 +51,52 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute\IFilterControllerAttribute.cs" />
+    <Compile Include="Attribute\IFilterActionAttribute.cs" />
     <Compile Include="ControllerFactory.cs" />
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Controller\ControllerObject.cs" />
     <Compile Include="Controller\DataLayerController.cs" />
     <Compile Include="Controller\ReturnViewsLayerController.cs" />
-    <Compile Include="DevelopmentTest\Controller\SecondController.cs" />
-    <Compile Include="DevelopmentTest\Controller\TestController.cs" />
     <Compile Include="Controller\NotFoundController.cs" />
+    <Compile Include="Crypto\Keys.cs" />
+    <Compile Include="Helpers\CollectionExtensions.cs" />
     <Compile Include="HttpMethods.cs" />
     <Compile Include="MVCApp.cs" />
-    <Compile Include="DevelopmentTest\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestHandler.cs" />
+    <Compile Include="Routing\DirectRouteAction.cs" />
+    <Compile Include="Routing\DirectRouteController.cs" />
+    <Compile Include="Routing\IRoute.cs" />
+    <Compile Include="Routing\RouteControllers.cs" />
+    <Compile Include="Routing\RouteWebFolder.cs" />
+    <Compile Include="Session.cs" />
+    <Compile Include="View\AccesDeniedView.cs" />
+    <Compile Include="View\ErrorView.cs" />
+    <Compile Include="View\FileView\CssFileView.cs" />
     <Compile Include="View\DataView.cs" />
+    <Compile Include="View\FileView\FileView.cs" />
+    <Compile Include="View\FileView\HtmlFileView.cs" />
+    <Compile Include="View\FileView\JsFileView.cs" />
+    <Compile Include="View\FileView\JpegFileView.cs" />
     <Compile Include="View\JsonDataView.cs" />
     <Compile Include="View\NotFoundView.cs" />
+    <Compile Include="View\FileView\PngFileView.cs" />
     <Compile Include="View\RawObjectView.cs" />
     <Compile Include="View\ViewObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
+    <None Include="Routing\ClassDiagramRouting.cd" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Class Diagram\DataModels.csproj">
+      <Project>{33e632cf-e921-45ac-8e53-05f6b86fb8d2}</Project>
+      <Name>DataModels</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
